Finish line approaching! Loops work

--- a/tests/header.html
+++ b/tests/header.html
@@ -1,7 +1,7 @@
 <div class="special">INSERTED!</div>
 
 <header>
-    <h2 data-mfbind="store1->innerText" data-mfsync="on(click) (innerText)=> alert(store1.name)">Default header</h2>
+    <h2 data-mfbind="store1->innerText" data-mfsync="on(click) (innerText)=> alert(innerText)">Default header</h2>
     <ul style="border-bottom: 1px solid gray; padding-bottom: 1rem;">
       <li><a href="https://www.google.com">Link 1</a></li>
       <li><a href="https://www.amazon.com">Link 2</a></li>
