Working through my troubles

--- a/tests/interactive.html
+++ b/tests/interactive.html
@@ -9,8 +9,8 @@
 <body>
   <h1>Reactivity test - IIFE</h1>
 
-  <p data-mf_templ="(store1)=> { console.log(store1); return store1.toUpperCase(); } as val"></p>
-  <div data-mf_templ="(store1)=> { console.log(store1); return store1.toUpperCase(); } as val">
+  <!-- <p data-mf_templ="(store1)=> { console.log(store1); return store1.toUpperCase(); } as val"></p>
+  <div data-mf_templ="(store1)=> { console.log(store1); return store1.toUpperCase(); } as val"> -->
     <!-- <input data-mf_bind="${val}-> value" data-mf_sync="on(click) console.log(value)"> -->
      <div style="margin-top: 5rem">${val}</div>
      <input type="text" data-mf_bind="store1->value" data-mf_sync="on(change, keyup) (store1)=> console.log(store1)">
@@ -28,13 +28,13 @@
   <p>Store 4 value: <span data-mf_Bind="store4->innerText"></span></p>
   <p>Checked store checked? <span data-mf_Bind="checkedStore-> innerText">Unknown</span></p>
   <p>Value of Mass Store 99: <span data-mf_Bind="mass_store99 -> innerText">Unknown</span></p>
-  <div data-secret="THIS IS A SECRET" data-mf_Sync="on($mount) sendAlert(data-secret) -> checkedStore"></div>
+  <div data-secret="THIS IS A SECRET" data-mf_Sync="on($mount) MfFn.sendAlert(dataSecret) -> checkedStore"></div>
 
   <!-- Content -->
   <div class="sync-grid">
     <label>On keyup:</label> <input data-mf_Bind="store1->value" data-mf_Sync="on(keyup, change) value -> store1">
     <label>Bind only:</label> <input data-mf_Bind="store1->value">
-    <label for="cb">Sync checkbox:</label> <input id="cb" type="checkbox" data-mf_Bind="store1->checked" data-mf_Sync="on(change) checked->checkedStore">
+    <label for="cb">Sync checkbox:</label> <input id="cb" type="checkbox" data-mf_Bind="store1->checked" data-mf_Sync="on(change) (checked)=> { console.log(checked); return checked }->checkedStore">
     <label for="cb2">Bind checkbox:</label> <input id="cb2" type="checkbox" data-mf_Bind="isChecked(store1)->checked">
     
     <!-- Select (with dynamic options) -->
@@ -97,16 +97,16 @@
     <div>ELSE</div>
   </template>
 
-  <div class="special-insert" data-mf_Get="on(click) /tests/interactive.html" data-mf_swapinner=".sync-grid -> header">Default insert</div>
-  <nav data-mf_Post="on(click) (store1, store2)=> store1.toUpperCase() + JSON.stringify(store2 || {}) -> /tests/header.html" data-mf_swapinner="header -> h1" data-mf_transsmart="true" data-mf_transdur="[5000, 300]">
+  <!-- <div class="special-insert" data-mf_Get="on(click) /tests/interactive.html" data-mf_swapinner=".sync-grid -> header">Default insert</div> -->
+  <!-- <nav data-mf_Post="on(click) (store1, store2)=> store1.toUpperCase() + JSON.stringify(store2 || {}) -> /tests/header.html" data-mf_swapinner="header -> h1" data-mf_transsmart="true" data-mf_transdur="[5000, 300]">
     <p>This is some default nav content.</p>
-  </nav>
+  </nav> -->
 
   <div class="trans" data-mf_Bind="specialStyling(store1)"></div>
 
   <!-- Store script -->
-  <script src="../dist/mfld.js" type="module"></script>
-  <script src="./tests/interactive.js" defer></script>
+  <!-- <script src="../dist/dev.mfld.mod.js" type="module"></script> -->
+  <script src="./tests/interactive.js" type="module"></script>
 </body>
 </html>
 
