Poking at conditionals

--- a/tests/interactive.html
+++ b/tests/interactive.html
@@ -7,7 +7,7 @@
   <title>Reactivity Test</title>
 </head>
 <body>
-  <h1>Reactivity test - IIFE</h1>
+  <h1>Reactivity test</h1>
 
   <p data-mf_templ="(store1)=> { console.log(store1); store1.toUpperCase() }"></p>
   <div data-mf_templ="(store1)=> { return store1.toUpperCase(); } as val">
